--- a/scss/common/_icons.scss
+++ b/scss/common/_icons.scss
@@ -15,39 +15,24 @@
   }
 }
 
-._icon-arrow-png:before {
-  content: "\e900";
-}
-._icon-facebookpng:before {
-  content: "\e901";
-}
-._icon-heartpng:before {
-  content: "\e902";
-}
-._icon-instagrampng:before {
-  content: "\e903";
-}
-._icon-linkedinpng:before {
-  content: "\e904";
-}
-._icon-mailpng:before {
-  content: "\e905";
-}
-._icon-mappng:before {
-  content: "\e906";
-}
-._icon-mobilepng:before {
-  content: "\e907";
-}
-._icon-quote:before {
-  content: "\e908";
-}
-._icon-searchpng:before {
-  content: "\e909";
-}
-._icon-triangle-arrowpng:before {
-  content: "\e90a";
-}
-._icon-twitterpng:before {
-  content: "\e90b";
-}
+._icon-facebook:before {
+   content: "\e900";
+ }
+ ._icon-instagram:before {
+   content: "\e901";
+ }
+ ._icon-linkedin:before {
+   content: "\e902";
+ }
+ ._icon-mail:before {
+   content: "\e903";
+ }
+ ._icon-map:before {
+   content: "\e904";
+ }
+ ._icon-mobile:before {
+   content: "\e905";
+ }
+ ._icon-twitter:before {
+   content: "\e906";
+ }
