--- a/scss/site-parts/_footer.scss
+++ b/scss/site-parts/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
    background-color: #1c1c1c;
-   padding: 30px 0;
+   // padding: 30px 0;
    &__inner {
       display: flex;
       align-items: center;
@@ -9,9 +9,27 @@
 }
 .footer-social {
    display: flex;
+   gap: 5px;
+   padding: 30px 0;
    &__item {
    }
    &__link {
+      &::before {
+         width: 30px;
+         height: 30px;
+         background-color: #fff;
+         color: #1c1c1c;
+         border-radius: 50%;
+
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         font-size: 18px;
+      }
+      &:hover::before {
+         background-color: $cyanColor;
+         color: $whiteColor;
+      }
    }
 }
 ._icon-facebookpng {
@@ -23,7 +41,12 @@
 ._icon-instagrampng {
 }
 .footer-copir {
+   padding: 30px 0;
    &__text {
       color: $whiteColor;
    }
+}
+.line {
+   border-bottom: 1px solid #556061;
+   width: 100%;
 }
