--- a/scss/site-parts/_testimonials-carousel.scss
+++ b/scss/site-parts/_testimonials-carousel.scss
@@ -37,29 +37,25 @@
          border-radius: 30px;
       }
    }
-
+   
    &__picture {
-      position: absolute;
-      top: 0;
-      left: 86px;
-      // position: relative;
-      &::after {
-         content: "";
-         position: absolute;
-         top: 50px;
-         left: -11px;
-         width: 188px;
-         height: 185px;
-         background-color: $accentColor;
-      }
+      margin-right: -130px;
+      position: relative;
       img {
          z-index: 100;
          position: relative;
+         
       }
    }
+   &__element {
+      position: absolute;
+      left: -11px;
+      bottom: -11px;
 
-   // .testimonials-carousel__content
-
+      width: 113%;
+      height: 100%;
+      background-color: $accentColor;
+   }
    &__content {
       flex: 0 0 71%;
       background: rgb(34, 34, 34);
@@ -67,9 +63,6 @@
       padding-left: 130px;
       padding-right: 40px;
    }
-
-   // .testimonials-carousel__name
-
    &__name {
       color: $whiteColor;
       padding-bottom: 5px;
@@ -87,12 +80,10 @@
          left: -43px;
       }
    }
-
-   // .testimonials-carousel__text
-
    &__text {
       color: $whiteColor;
-      font-size: 16px;
+      // font-size: 16px;
+      @include adaptiv(16, 14);
       line-height: 2;
       position: relative;
       &::after {
